--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "start": "react-scripts start",
     "json-server": "json-server --watch Serbook.json --port 3001",
-    "serve": "concurrently \"npm run json-server\" \"npm start\"",
+    "service": "concurrently \"npm run json-server\" \"npm start\"",
+    "serve": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
