--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "json-server": "^0.16.1",
+    "express": "^4.17.1",
     "concurrently": "^5.1.0",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
