--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,9 @@ steps:
 - name: "gcr.io/cloud-builders/docker"
   args: ["push", "gcr.io/$PROJECT_ID/react-books-frontend"]
 
+- name: "gcr.io/cloud-builders/gcloud"
+  args: ["app", "deploy","./app.yaml"]
+
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
   - 'run'
